--- a/css/style.css
+++ b/css/style.css
@@ -41,11 +41,12 @@ body{
 }
 
 .mostrarPreciosCargados{    
-    margin: 10px 0 10px 10px;
+    /* margin: 10px 0 10px 10px; */
+    margin-left: 10px;
         
 }
 
 .btnModificar{
-    margin: 10px 0 10px 10px;
-    
+    /* margin: 10px 0 10px 10px; */
+    margin-left: 10px;
 }
